fix webpage links

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       of such beverages.
     </p>
     <ul>
-      <li><a href="/odin-recipes/lasagna.html">Lasagna</a></li>
-      <li><a href="/odin-recipes/burger.html">Burger</a></li>
-      <li><a href="/odin-recipes/pares.html">Pares</a></li>
+      <li><a href="/lasagna.html">Lasagna</a></li>
+      <li><a href="/burger.html">Burger</a></li>
+      <li><a href="/pares.html">Pares</a></li>
     </ul>
     <script src="" async defer></script>
   </body>
