fix link to main site

--- a/lasagna.html
+++ b/lasagna.html
@@ -56,7 +56,7 @@
         melted, about 1 hour.
       </li>
     </ol>
-    <a href="/odin-recipes/index.html">Back to site</a>
+    <a href="/index.html">Back to site</a>
     <script src="" async defer></script>
   </body>
 </html>
