--- a/pares.html
+++ b/pares.html
@@ -53,7 +53,7 @@
         and enjoy.
       </li>
     </ol>
-    <a href="/odin-recipes/index.html">Back to site</a>
+    <a href="/index.html">Back to site</a>
     <script src="" async defer></script>
   </body>
 </html>
