--- a/burger.html
+++ b/burger.html
@@ -46,7 +46,7 @@
         meal
       </li>
     </ol>
-    <a href="/odin-recipes/index.html">Back to site</a>
+    <a href="/index.html">Back to site</a>
     <script src="" async defer></script>
   </body>
 </html>
