--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Mateo's RestoBar Best Selling Meals</h1>
-    <img
-      src="/Images/Resto.jpg"
-      alt="A nice outdoor dining in Mateo's Restobar"
-    />
+    <div class="image-container">
+      <img
+        id="resto-pic"
+        src="/Images/Resto.jpg"
+        alt="A nice outdoor dining in Mateo's Restobar"
+      />
+    </div>
+
     <h2>Life's too short for boring food!</h2>
     <p>
       Serving of alcoholic beverages for consumption by guests on the premises
