Styled images and texts, wrapped and centered images on screen, styled mainpage texts to center

--- a/burger.html
+++ b/burger.html
@@ -7,11 +7,15 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Burger</h1>
-    <img src="/Images/burger.jpg" alt="Image of best selling burger" />
+    <img
+      class="food-images"
+      src="/Images/burger.jpg"
+      alt="Image of best selling burger"
+    />
     <h2>Burger is a high quality snack.</h2>
     <p>
       Burger is a popular sandwich made from ground meats that are formed into a
