--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Mateo's RestoBar Best Selling Meals</h1>
+    <h1 class="middle-title">Mateo's RestoBar Best Selling Meals</h1>
     <div class="image-container">
       <img
         id="resto-pic"
@@ -19,13 +19,16 @@
       />
     </div>
 
-    <h2>Life's too short for boring food!</h2>
-    <p>
+    <h2 class="middle-title">Life's too short for boring food!</h2>
+    <p class="description">
       Serving of alcoholic beverages for consumption by guests on the premises
-      and in which food service, if any, is only incidental to the consumption
-      of such beverages.
     </p>
-    <ul>
+    <p class="description">
+      and in which food service, if any, is only incidental
+    </p>
+    <p class="description">to the consumption of such beverages.</p>
+
+    <ul id="recipe-list">
       <li><a href="/lasagna.html">Lasagna</a></li>
       <li><a href="/burger.html">Burger</a></li>
       <li><a href="/pares.html">Pares</a></li>
