--- a/pares.html
+++ b/pares.html
@@ -7,11 +7,15 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Pares</h1>
-    <img src="/Images/Pares.jpg" alt="An image of best selling pares" />
+    <img
+      class="food-images"
+      src="/Images/Pares.jpg"
+      alt="An image of best selling pares"
+    />
     <h2>Pares also known as beef pares.</h2>
     <p>
       A Filipino braised beef stew with garlic fried rice, and a bowl of clear
