--- a/lasagna.html
+++ b/lasagna.html
@@ -7,11 +7,12 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Lasagna</h1>
     <img
+      class="food-images"
       src="/Images/lasagna.jpg"
       alt="An image of best selling lasagna on a plate"
     />
